Fixed scrollbar style for phones

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,33 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+body {
   height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   overflow: hidden;
 }
 
-html{
+html {
   height: 100%;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 8px;
-}
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px grey;
-  background: #f1f1f1;
-}
+@media only screen  and (min-width: 420px) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 12px;
-}
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey;
+    background: #f1f1f1;
+  }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 12px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 }
